--- a/.gitignore
+++ b/.gitignore
@@ -472,3 +472,9 @@ composer.lock
 *.css.map
 *.sass.map
 *.scss.map
+
+##### Environments
+# Environment configuration
+/.env
+/.env.*
+!.env.example
